--- a/dino-game-clone/styles.css
+++ b/dino-game-clone/styles.css
@@ -8,7 +8,7 @@
 #dino {
     width: 50px;
     height: 50px;
-    background-image: url(./img/trex.png);
+    background-image: url("img/trex.png");
     background-size: 50 px 50px;
     position: relative;
     top: 150px;
@@ -36,3 +36,26 @@
         top: 150px;
     }
 }
+
+#cactus {
+    width: 20px;
+    height: 40px;
+    position: relative;
+    top: 110px;
+    left: 580px;
+  
+    background-image: url("img/cactus.png");
+    background-size: 20px 40px;
+  
+    animation: block 1s infinite linear;
+  }
+  
+  @keyframes block {
+    0% {
+      left: 580px;
+    }
+  
+    100% {
+      left: -20px;
+    }
+  }
